# OOP_Lb

1 лаб/: lb1_OOP.doc
1 лаб/игра/: Error.h  GameShip.cpp  GameShip.h  Makefile  game  main.cpp  manager.cpp  manager.hpp  ship.cpp  ship.hpp
2 лаб/: lb2_OOP.docx
2 лаб/игра/: Abilities.cpp  Abilities.h  AbilityManager.cpp  AbilityManager.h  Exceptions.cpp  Exceptions.h  FleetManager.cpp  FleetManager.h  GameShip.cpp  GameShip.h  Makefile  Ship.cpp  Ship.h  main.cpp  makeprogram
3 лаб/игра/: AbilityManager.cpp  AbilityManager.h  AttackOutOfRangeError.cpp  AttackOutOfRangeError.h  BombingAbility.cpp  BombingAbility.h  CMakeLists.txt  CellState.cpp  CellState.h  DoubleDamageAbility.cpp  DoubleDamageAbility.h  FileInteractionError.cpp  FileInteractionError.h  Game.cpp  Game.h  GameBoard.h  GameState.cpp  GameState.h  IAbility.cpp  IAbility.h  LocationShipError.cpp  LocationShipError.h  NonNumberInputError.cpp  NonNumberInputError.h  NullAbilityUseError.cpp  NullAbilityUseError.h  ScannerAbility.cpp  ScannerAbility.h  SegmentState.h  Ship.cpp  Ship.h  ShipManager.cpp  ShipManager.h  lb3_OOP.docx  main.cpp
3 лаб/игра/saves/: game1.txt
